<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="generale">
		<ListPreference android:title="orientation"
			android:key="orientation" android:defaultValue="3" android:entries="@array/orientation"
			android:entryValues="@array/orientationvalue"></ListPreference>
		<Preference android:title="@string/partager" android:key="partage"></Preference>
		<CheckBoxPreference android:defaultValue="false"
			android:summaryOff="@string/active" android:summaryOn="@string/desactive"
			android:title="@string/astuces" android:key="astuces" />
		<CheckBoxPreference android:defaultValue="false"
			android:summaryOff="@string/desactive" android:summaryOn="@string/active"
			android:title="@string/policeperso" android:key="policeperso" />
		<CheckBoxPreference android:defaultValue="false" android:key="ordredeschapitres" android:summaryOff="@string/normal" android:title="@string/ordredeschapitres" android:summaryOn="@string/inverse"></CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pdtlalecture">

		<EditTextPreference android:key="publicite"
			android:title="@string/pub" />
		<CheckBoxPreference android:defaultValue="false"
			android:summaryOff="@string/desactive" android:summaryOn="@string/active"
			android:title="@string/pleinecran" android:key="fullscreen" />
		<CheckBoxPreference android:defaultValue="false"
			android:summaryOff="@string/desactive" android:summaryOn="@string/active"
			android:title="@string/glisser" android:key="swype" />
		
	</PreferenceCategory>

</PreferenceScreen>
