<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:background="#666666"
    android:paddingTop="3dip" >
    <ImageView
        android:id="@+id/buttonLeft"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:contentDescription="@string/buttonleft"
        android:onClick="BeforeClick"
        android:paddingLeft="3dip"
        android:scaleType="centerInside"
        android:src="@drawable/before" />
    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dip"
        android:autoStart="true"
        android:flipInterval="3200"
        android:inAnimation="@anim/push_left_in"
        android:onClick="FlipperClick"
        android:outAnimation="@anim/push_left_out" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/afficherlesite"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/evaluer"
            android:textSize="20sp"
            android:textStyle="bold" />
    </ViewFlipper>
    <ImageView
        android:id="@+id/buttonRight"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:contentDescription="@string/buttonright"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:onClick="NextClick"
        android:paddingRight="3dip"
        android:scaleType="centerInside"
        android:src="@drawable/next" />
</RelativeLayout>