<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        layout="@layout/actionbar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true" > <!-- android:scrollbarFadeDuration="0" -->

        <LinearLayout
            android:id="@+id/button_root"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundgradient2"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="6dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/action_one_button"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/dashboard_button_add_selector"
                    android:onClick="onActionAdd"
                    android:text="@string/ajout" />

                <Button
                    android:id="@+id/action_two_button"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/dashboard_button_see_selector"
                    android:onClick="onActionShow"
                    android:text="@string/afficher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/action_five_button"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/dashboard_button_see_selector2"
                    android:onClick="onActionShowSd"
                    android:text="@string/affichersd" />

                <Button
                    android:id="@+id/action_four_button"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/dashboard_button_preferences_selector"
                    android:onClick="onActionPreferenceClick"
                    android:text="@string/preferences" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/action_three_button"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/dashboard_button_remove_selector"
                    android:onClick="onActionTrashClick"
                    android:text="@string/vider" />

                <Button
                    android:id="@+id/action_six_button"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/dashboard_button_mail_selector"
                    android:onClick="onActionSendClick"
                    android:text="@string/contacterledev" />
            </LinearLayout>

            <!-- <LinearLayout android:orientation="horizontal" -->
            <!-- android:layout_width="fill_parent" android:layout_height="wrap_content" -->
            <!-- android:layout_weight="1"> -->
            <!-- <Button android:id="@+id/action_three_button" style="@style/HomeButton" -->
            <!-- android:onClick="onActionTrashClick" android:text="@string/vider" -->
            <!--
                 android:drawableTop="@drawable/dashboard_button_remove_selector" 
				/>
            -->
            <!-- <Button android:id="@+id/action_six_button" style="@style/HomeButton" -->
            <!-- android:onClick="onActionSendClick" android:text="@string/contacterledev" -->
            <!-- android:drawableTop="@drawable/dashboard_button_mail_selector" /> -->


            <!-- </LinearLayout> -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/now_playing_loading"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:layout_weight="1"
        android:background="@drawable/backgroundgradient"
        android:gravity="center"
        android:orientation="horizontal" >

        <!--
             <ProgressBar style="?android:attr/progressBarStyleSmall" android:layout_width="wrap_content" 
			android:layout_height="wrap_content" android:paddingRight="6dip" android:indeterminate="true" 
			/> <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:textSize="@dimen/text_size_small" android:text="@string/now_playing_loading" 
			/>
        -->

        <include layout="@layout/homemultilink" />
    </LinearLayout>

</LinearLayout>