<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2010 Google Inc. Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<include layout="@layout/actionbar" android:layout_width="fill_parent"
		android:layout_height="45dip" />


	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="0dip"
		android:layout_weight="1" android:padding="6dip"
		android:background="@drawable/backgroundgradient2"
		android:baselineAligned="false"
		>
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/button_france" style="@style/HomeButton"
				android:onClick="onActionAddFrance" android:drawableTop="@drawable/dashboard_button_france"
				android:text="@string/francais" />
			<Button android:id="@+id/button_angleterre" style="@style/HomeButton"
				android:onClick="onActionAddAngleterre" android:drawableTop="@drawable/dashboard_button_angleterre"
				android:text="@string/anglais" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/button_espagne" style="@style/HomeButton"
				android:onClick="onActionAddEspagne" android:drawableTop="@drawable/dashboard_button_espagne"
                android:text="@string/espagnole" />
<!-- 			<Button android:id="@+id/action_four_button" style="@style/HomeButton" -->
<!-- 			android:onClick="onActionPreferenceClick" android:text="@string/preferences" -->
<!-- 			android:drawableTop="@drawable/dashboard_button_preferences_selector" -->
<!-- 			/> -->
		</LinearLayout>

		<!-- <LinearLayout android:orientation="horizontal" -->
		<!-- android:layout_width="fill_parent" android:layout_height="wrap_content" -->
		<!-- android:layout_weight="1"> -->
		<!-- <Button android:id="@+id/action_three_button" style="@style/HomeButton" -->
		<!-- android:onClick="onActionThreeClick" android:text="@string/vider" -->
		<!-- android:drawableTop="@drawable/dashboard_button_remove_selector" /> -->
		<!-- <Button android:id="@+id/action_six_button" style="@style/HomeButton" -->
		<!-- android:onClick="onActionSixClick" android:text="@string/dashboard_action" -->
		<!-- android:drawableTop="@drawable/dashboard_button_selector" /> -->
		<!-- </LinearLayout> -->
	</LinearLayout>

	<!-- <LinearLayout android:id="@+id/now_playing_loading" -->
	<!-- android:layout_width="fill_parent" android:layout_height="@dimen/now_playing_height" -->
	<!-- android:orientation="horizontal" android:gravity="center" -->
	<!-- android:background="@drawable/backgroundgradient"> -->
	<!-- <ProgressBar style="?android:attr/progressBarStyleSmall" -->
	<!-- android:layout_width="wrap_content" android:layout_height="wrap_content" -->
	<!-- android:paddingRight="6dip" android:indeterminate="true" /> -->
	<!-- <TextView android:layout_width="wrap_content" -->
	<!-- android:layout_height="wrap_content" android:textSize="@dimen/text_size_small" -->
	<!-- android:text="@string/now_playing_loading" /> -->
	<!-- </LinearLayout> -->
</LinearLayout>
